# blackhole-agent

./: .gitignore  README.md  pyproject.toml
artifacts/: evolution-20260702T060713Z-skill-route-discovery-pass1.md  evolution-20260702T064809Z-skill-route-discovery-pass3.md  evolution-20260702T082713Z-skill-route-discovery-pass4-completion.md  evolution-20260702T092713Z-skill-route-discovery-pass3.md  evolution-20260702T140844Z-provider-runtime-control-pass1.md  evolution-20260702T142625Z-provider-runtime-control-pass2.md  evolution-20260702T150625Z-provider-runtime-control-pass4.md  evolution-20260702T154625Z-skill-route-discovery-pass2.md  evolution-20260702T175117Z-skill-route-discovery-pass3.md  evolution-20260702T183302Z-skill-route-discovery-pass1-current-window.md  evolution-20260702T193117Z-skill-route-discovery-pass4.md  evolution-20260702T195118Z-provider-runtime-control-pass1.md  evolution-20260702T202709Z-provider-runtime-control-pass2.md  evolution-20260702T204709Z-provider-runtime-control-pass3.md  evolution-20260702T210708Z-provider-runtime-control-pass4.md  evolution-20260702T222121Z-skill-route-discovery-pass3.md  evolution-20260703T010625Z-skill-route-discovery-pass2.md  evolution-20260703T052048Z-skill-route-discovery-pass1.md  evolution-20260703T062048Z-skill-route-discovery-pass4-current-digest.md  evolution-20260703T090050Z-skill-route-discovery-pass4.md  evolution-20260703T115315Z-skill-route-discovery-pass3.md  evolution-20260703T135921Z-skill-route-discovery-pass4-completion.md  evolution-20260703T141923Z-skill-route-discovery-pass1.md  evolution-20260703T151923Z-skill-route-discovery-pass4-completion.md  evolution-20260703T153921Z-skill-route-discovery-pass1.md  evolution-20260703T161922Z-skill-route-discovery-pass3.md  evolution-20260703T195925Z-skill-route-discovery-pass2.md  (+274 more)
(+2599 files in other folders)
